# mediaPlayer

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp  sliderPlayer.cpp  sliderPlayer.h  videoPlayerApp.cpp  videoPlayerApp.h  videoPlayerApp.inl  videoPlayerApp.pro  videoPlayerApp.qrc  videoPlayerApp.sln  videoPlayerApp.ui  videoPlayerApp.vcxproj  videoPlayerApp.vcxproj.filters  videoPlayerApp_en_US.ts  videoPlayerApp_ru_RU.ts  videoPlayer_ru_RU.ts
callBackFunc/: ICallBackFunc.h  callBackFunc.h  callBackFunc.inl
gst-plugin/: CMakeLists.txt
gst-plugin/gstaudio/: CMakeLists.txt  enum_property.h  gstaudio.cpp  gstaudio.h  streamvolume.cpp  streamvolume.h
gst-plugin/gstmyvideo/: CMakeLists.txt  gstmyvideo.cpp  gstmyvideo.h  navigation.cpp  navigation.h  videooverlay.cpp  videooverlay.h
interface/: CMakeLists.txt
interface/iAudio/: CMakeLists.txt  iAudio.h
interface/iAudioPlayer/: CMakeLists.txt  iAudioPlayer.h
interface/iBotomMenu/: CMakeLists.txt
interface/iBotomMenu/iBotomMenuPlayer/: CMakeLists.txt  iBotomMenuPlayer.cpp  iBotomMenuPlayer.h
interface/iFactory/: CMakeLists.txt
interface/iFactory/iFGstElement/: CMakeLists.txt  iGstElement.h
interface/iFactory/iFGstElementAudio/: CMakeLists.txt  iFGstElementAudio.h
interface/iFactory/iFGstElementDecodebin/: CMakeLists.txt  iFGstElementDecodebin.h
interface/iFactory/iFGstElementSrc/: CMakeLists.txt  iFGstElementSrc.h
interface/iFactory/iFGstElementVideo/: CMakeLists.txt  iFGstElementVideo.h
interface/iFactory/iFGstVideoOverlay/: CMakeLists.txt  iFGstVideoOverlay.h
interface/iFactory/iFVideoPlayer/: CMakeLists.txt  iFVideoPlayer.h
interface/iGstAudioPlayer/: CMakeLists.txt  iGstAudioPlayer.cpp  iGstAudioPlayer.h
interface/iGstMediaPlayer/: CMakeLists.txt  iGstMediaPlayer.cpp  iGstMediaPlayer.h
interface/iGstVideoPlayer/: CMakeLists.txt  iGstVideoPlayer.cpp  iGstVideoPlayer.h
interface/iMediaPlayer/: CMakeLists.txt  iMediaPlayer.h
interface/iPlayer/: CMakeLists.txt  iPlayer.h
interface/iVideoOutput/: CMakeLists.txt  iVideoOutput.h
interface/iVideoPlayer/: CMakeLists.txt  iVideoPlayer.cpp  iVideoPlayer.h
mvc/: CMakeLists.txt
mvc/controller/: CMakeLists.txt  controller.h  controller.inl
mvc/controller/init/: CMakeLists.txt  init.h
mvc/controller/init/videoPlayer/: CMakeLists.txt  videoPlayer.cpp  videoPlayer.h
mvc/controller/mute/: CMakeLists.txt  mute.h
mvc/controller/mute/videoPlayer/: CMakeLists.txt  videoPlayer.cpp  videoPlayer.h
mvc/controller/openFile/: CMakeLists.txt  openFile.h
mvc/controller/openFile/videoPlayer/: CMakeLists.txt  videoPlayer.cpp  videoPlayer.h
mvc/controller/player/: CMakeLists.txt  player.cpp  player.h
mvc/controller/player/videoPlayer/: CMakeLists.txt  videoPlayer.cpp  videoPlayer.h
mvc/controller/position/: CMakeLists.txt  position.h
mvc/controller/position/videoPlayer/: CMakeLists.txt  videoPlayer.cpp  videoPlayer.h
mvc/controller/volume/: CMakeLists.txt  volume.h
mvc/controller/volume/videoPlayer/: CMakeLists.txt  videoPlayer.cpp  videoPlayer.h
mvc/model/: CMakeLists.txt  model.h
mvc/model/videoPlayer/: CMakeLists.txt  videoPlayer.h
mvc/view/: CMakeLists.txt  view.h  view.inl
mvc/view/videoPlayer/: CMakeLists.txt  videoPlayer.cpp  videoPlayer.h
object/: CMakeLists.txt
object/factory/: CMakeLists.txt
object/factory/fGstDecodebin/: CMakeLists.txt  fGstDecodebin.cpp  fGstDecodebin.h
object/factory/fGstMyPlaginAudio/: CMakeLists.txt  fGstMyPlaginAudio.cpp  fGstMyPlaginAudio.h
object/factory/fGstMyPlaginVideo/: CMakeLists.txt  fGstMyPlaginVideo.cpp  fGstMyPlaginVideo.h
object/factory/fGstSrc/: CMakeLists.txt  fGstSrc.cpp  fGstSrc.h
object/factory/fGstVideoPlayer/: CMakeLists.txt  fGstVideoPlayer.cpp  fGstVideoPlayer.h
object/factory/fVideoPlayer/: CMakeLists.txt  fVideoPlayer.cpp  fVideoPlayer.h
object/gstVideoPlayer/: CMakeLists.txt  gstVideoPlayer.cpp  gstVideoPlayer.h
object/videoPlayer/: CMakeLists.txt  videoPlayer.cpp  videoPlayer.h
player/: player.cpp  player.h  playerException.cpp  playerException.h  playerGStreamer.cpp  playerGStreamer.h
plugin/: CMakeLists.txt
plugin/gstreamer/: CMakeLists.txt  config.h
plugin/gstreamer/gstaudio/: CMakeLists.txt  enum_property.h  gstaudio.cpp  gstaudio.h  streamvolume.h
plugin/gstreamer/gstmyvideo/: CMakeLists.txt  gstmyvideo.cpp  gstmyvideo.h  navigation.cpp  navigation.h  videooverlay.cpp  videooverlay.h
timer/: timer.cpp  timer.h  timer.inl
videoPlayer/: playbinGstream.cpp  playbinGstream.h  playbinGstream.inl  videoPlayer.cpp  videoPlayer.h
widget/: CMakeLists.txt
widget/botomMenu/: CMakeLists.txt
widget/botomMenu/botomMenuPlayer/: CMakeLists.txt  botomMenuPlayer.cpp  botomMenuPlayer.h  botomMenuPlayer.ui
widget/contexMenu/: CMakeLists.txt  contexMenu.cpp  contexMenu.h  contexMenu.qrc  contexMenu.ui
widget/slider/: CMakeLists.txt  slider.cpp  slider.h
widget/videoPlayer/: CMakeLists.txt  videoPlayer.cpp  videoPlayer.h  videoPlayer.ui
