cmake_minimum_required(VERSION 3.5)

project(interface)

add_subdirectory(iMediaPlayer)
add_subdirectory(iGstMediaPlayer)
add_subdirectory(iGstAudioPlayer)
add_subdirectory(iGstVideoPlayer)
add_subdirectory(iAudioPlayer)
add_subdirectory(iBotomMenu)
add_subdirectory(iVideoPlayer)
add_subdirectory(iFactory)
